--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && nodemon ./src/index.mjs"
+    "start": "tsc && node ./src/index.mjs"
   },
   "keywords": [],
   "author": "",
