--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^24.0.11",
+    "@types/nodemailer": "^6.4.17",
     "@types/pdfkit": "^0.14.0",
     "@types/socket.io": "^3.0.1",
     "@types/socket.io-client": "^1.4.36",
@@ -36,9 +37,11 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.2",
+    "nodemailer": "^7.0.5",
     "openai": "^5.8.3",
     "pdfkit": "^0.17.1",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "uuid": "^11.1.0"
   }
 }
