--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^17.1.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mathjs": "^14.7.0",
     "mongoose": "^8.16.2",
     "nodemailer": "^7.0.5",
     "openai": "^5.8.3",
