Add memory feature using pinecone embeddings

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@pinecone-database/pinecone": "^6.1.2",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
